<resources>
    <string name="app_name">ChattingApp</string>
    <string name="title_activity_chat_page">ChatPage</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="new_message">New Message</string>

    <string name="contact">New Contact</string>
    <string name="group">New Group</string>
    <string name="back">Back</string>

    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="setting">setting</string>
    <string name="chat">chats</string>
    <string name="login">LOGIN</string>
    <string name="register">JOIN-US</string>
    <string name="logo">LOGO</string>
    <string name="sample">+923004545555</string>
    <string name="phone_number">Phone Number</string>
    <string name="send_code">Send Code</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>