<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_back"
        android:enabled="true"
        android:icon="@drawable/ic_back"
        android:title="@string/back"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_new_contact"
        android:enabled="true"
        android:icon="@drawable/ic_new_contact"
        android:title="@string/contact"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_new_group"
        android:enabled="true"
        android:icon="@drawable/ic_new_group"
        android:title="@string/group"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
</menu>