<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_chat"
        android:enabled="true"
        android:icon="@drawable/ic_chats"
        android:title="@string/chat"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_new_message"
        android:enabled="true"
        android:icon="@drawable/ic_new_message"
        android:title="@string/new_message"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_logout"
        android:enabled="true"
        android:icon="@drawable/ic_setting"
        android:title="@string/setting"
        app:showAsAction="ifRoom" />
</menu>